# interchange

./: .coveragerc  .gitignore  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: test-py27.yml  test-py35+.yml  test-py37+.yml
docs/: collections.rst  conf.py  geo.rst  index.rst  packstream.rst  text.rst  time.rst
docs/_templates/: layout.html
interchange/: collections.py  math.py  packstream.py  time.py
test/: requirements.txt
test/collections/: test_propertydict.py
test/packstream/: common.py  test_fuzzy.py  test_packing.py  test_packstream.py  test_structures.py  test_unpacking.py
test/text/: test_first_sentence.py  test_words.py
test/time/: __init__.py  test_clocktime.py  test_date.py  test_datetime.py  test_duration.py  test_time.py
