[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
threadleak = 1

[tox:tox]
envlist = clean,py37,py38,py39,py310,py311,report

[testenv]
commands = coverage run --append --module pytest
deps =
    coverage
    pytest
    pytest-cov
depends =
    {py37,py38,py39,py310,py311}: clean
    report: py37,py38,py39,py310,py311

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:report]
deps = coverage
skip_install = true
commands = coverage report
